Fixed some css spacing and borders

--- a/src/styles/toner-haven.scss
+++ b/src/styles/toner-haven.scss
@@ -3,18 +3,21 @@
 html, body {
   font-family: "Nunito", "sans-serif"
 }
-
 body {
   background-image: url("/images/home-shape.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+#navbar {
+  border: 1px solid #d1d1d1;
+}
+.content-spacer {
+  margin: 50px 0;
+}
 .img-responsive {
   width: 100%;
 }
-
 .middle-center {
   display: flex;
   align-items: center;
@@ -26,55 +29,51 @@ body {
 .text-red {
   color: #ff0033;
 }
+.flex {
+  display: flex;
+  &-between {
+    display: flex;
+    justify-content: space-between
+  }
+  &-evenly {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
 .btn {
   border-radius: 5px;
-}
-.btn.call-to-action {
-  padding: 10px;
-  font-size: 20px;
-  font-weight: 600;
-  border: 1px solid #005cff;
-  color: #005cff
-}
-
-.btn.call-to-action:hover {
-  background: #0a57e0;
-  color: #ffffff;
-  border: 1px solid #005cff
-}
-
-.btn.btn-primary {
-  color: #ffffff;
-  background: #005cff;
-  border: 1px solid #005cff
-}
-
-.btn.btn-primary:hover {
-  background: #0a57e0;
-  color: #ffffff;
+  &.call-to-action {
+    padding: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    border: 1px solid #005cff;
+    color: #005cff
+  }
+  &.call-to-action:hover {
+    background: #0a57e0;
+    color: #ffffff;
+    border: 1px solid #005cff
+  }
+  &.btn-primary {
+    color: #ffffff;
+    background: #005cff;
+    border: 1px solid #005cff
+  }
+  &.btn-primary:hover {
+    background: #0a57e0;
+    color: #ffffff;
+  }
 }
 
 .very-boring-box {
   border: 1px solid #d1d1d1;
   border-radius: 5px;
 }
-
 .component-title {
   font-size: 20px;
   margin-top: 30px;
   margin-bottom: 20px;
 }
-
-.flex-between {
-  display: flex;
-  justify-content: space-between
-}
-
-/* Hide the woo test stuff */
-.woocommerce-notices-wrapper {
-  display: none;
-}
-
 .product-thumbnail {
   width: 100px;
 }
@@ -85,52 +84,15 @@ body {
   background: rgb(208, 206, 250);
   background: linear-gradient(122deg, rgb(255 255 255) 0%, rgb(198 197 208 / 24%) 100%);
   border-top: 1px solid #d1d1d1;
-}
-
-.footer .footer-contents {
-  padding: 100px 0;
-}
-
-.footer .footer-rights {
-  padding: 10px 0;
-}
-
-.footer .footer-title {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-}
-
-
-/*  WP Forms */
-.wpforms-field-container {
-  padding: 20px;
-  background: #fff;
-  box-shadow: 10px 15px 25px #eeeeee;
-}
-
-.wpforms-field {
-  border: none !important;
-  background: none;
-}
-
-.wpforms-field input,
-.wpforms-field textarea {
-  border: 1px solid #d1d1d1;
-  font-size: 20px;
-  padding: 5px;
-}
-
-.wpforms-submit {
-  padding: 10px 20px;
-  width: 200px;
-  margin: auto;
-  display: block;
-  border: none;
-  background: #0074ff;
-  color: #ffffff;
-}
-
-.wpforms-submit:hover {
-  background: #0e6fe4
+  & .footer-contents {
+    padding: 100px 0;
+  }
+  & .footer-rights {
+    padding: 10px 0;
+  }
+  & .footer-title {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
